modal na e srecke

--- a/e-srecke.html
+++ b/e-srecke.html
@@ -126,6 +126,7 @@
                     </div>
                 </div>
                 <div class="row">
+
                     <div class="col">
                         <div class="five-games__wrapper__item mb-lg-0 mb-4">
                             <div class="five-games__wrapper__item__img">
@@ -137,12 +138,109 @@
                                 <div class="five-games__wrapper__item__txt__link">
                                     <a href="#" class="link-black">Demo</a>
                                     <span>|</span>
-                                    <a href="#" class="link-black">Pravila</a>
+                                    <a href="#" class="link-black" data-toggle="modal" data-target=".bubaMara-modal">Pravila</a>
                                 </div>
                                 <button class="btn btn-dark text-uppercase font-weight-bold">Igraj</button>
                             </div>
                         </div>
                     </div>
+
+                    <!-- Modal -->
+                    <div class="modal fade bubaMara-modal modal--srecke" id="" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                    <p>Ovu e-srećku možete kupiti po ceni od 20, 40, 60, 80 ili 100 dinara.</p>
+                                    <p>Za svaku cenu postoji unapred definisan fond dobitaka koji možete pogledati klikom na ovaj link u pravilima igre.U skladu sa tim, kupovinom skuplje e-srećke možete ostvariti i veće dobitke. Broj preostalih dobitaka možete pogledati u tabeli ispod.</p>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Preostali dobici zakljucno sa 07.11.2020 u 00:00h</p>
+                                    <table class="table table-bordered">
+                                        <thead>
+                                          <tr>
+                                            <th scope="col">Vrsta</th>
+                                            <th scope="col">20 RSD</th>
+                                            <th scope="col">40 RSD</th>
+                                            <th scope="col">60 RSD</th>
+                                            <th scope="col">80 RSD</th>
+                                            <th scope="col">100 RSD</th>
+                                          </tr>
+                                        </thead>
+                                        <tbody>
+                                          <tr>
+                                            <th scope="row">1</th>
+                                            <td>5</td>
+                                            <td>5</td>
+                                            <td>5</td>
+                                            <td>5</td>
+                                            <td>5</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">2</th>
+                                            <td>14</td>
+                                            <td>15</td>
+                                            <td>15</td>
+                                            <td>15</td>
+                                            <td>15</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">3</th>
+                                            <td>2,500</td>
+                                            <td>2,700</td>
+                                            <td>2,800</td>
+                                            <td>2,900</td>
+                                            <td>2,900</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">4</th>
+                                            <td>13,300</td>
+                                            <td>13,301</td>
+                                            <td>13,302</td>
+                                            <td>13,303</td>
+                                            <td>13,304</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">5</th>
+                                            <td>171,500</td>
+                                            <td>171,503</td>
+                                            <td>171,505</td>
+                                            <td>171,506</td>
+                                            <td>171,507</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">6</th>
+                                            <td>385,800</td>
+                                            <td>385,800</td>
+                                            <td>385,800</td>
+                                            <td>385,800</td>
+                                            <td>385,800</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">7</th>
+                                            <td>690,900</td>
+                                            <td>690,900</td>
+                                            <td>690,900</td>
+                                            <td>690,900</td>
+                                            <td>690,900</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">8</th>
+                                            <td>1,790,900</td>
+                                            <td>1,790,900</td>
+                                            <td>1,790,900</td>
+                                            <td>1,790,900</td>
+                                            <td>1,790,900</td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col">
                         <div class="five-games__wrapper__item mb-lg-0 mb-4">
                             <div class="five-games__wrapper__item__img">
