--- a/dobitnici.html
+++ b/dobitnici.html
@@ -124,23 +124,23 @@
 
         <section class="dobitnici-carousel container">
 
-            <div class="dobitnici-carousel__item dobitnici-carousel__item--loto">
+            <div class="dobitnici-carousel__item">
                 <div class="item-img">
                     <img src="images/dobitnici/milan-nikolic.jpg" alt="">
                 </div>
                 <div class="item-name text-center">
                     Milan Nikolić (43) <br>Valjevo
                 </div>
-                <div class="item-testimonial text-center text-white">
+                <div class="item-testimonial text-center">
                     “Verovatno ću da se preselim na Mars lalala!”
                 </div>
-                <div class="item-decoration item-decoration--star">
-                    <img src="images/dobitnici/white-star.svg" alt="">
+                <div class="item-decoration item-decoration--line">
+                   
                 </div>
                 <div class="item-game text-center">
                     Loto sedmica
                 </div>
-                <div class="item-prize item-prize--loto text-center">
+                <div class="item-prize color-red text-center">
                     2.500.000&euro;
                 </div>
             </div>
