--- a/moj-profil.html
+++ b/moj-profil.html
@@ -1866,7 +1866,7 @@
             }
         });
 
-        $(".sorting-table").mouseover(function(){
+        $(".sorting-table").touchmove(function(){
             $(this).removeClass("anim");
         })
     </script>
