--- a/about-us.html
+++ b/about-us.html
@@ -155,7 +155,7 @@
 
         <div class="col-lg-9 tab-content" id="nav-tabContent">
             <div class="izvestaj__tabele tab-pane fade show active" id="tab1-list" role="tabpanel" aria-labelledby="tab1">
-                <div class="sorting-table sorting-table--docs" style="width:100%">
+                <div class="sorting-table anim sorting-table--docs" style="width:100%">
                     <table id="fin"
                         class="display nowrap table-pager datatable table-pager--loc"
                         style="width:100%">
@@ -228,7 +228,7 @@
             </div>
 
             <div class="tab-pane fade" id="tab2-list" role="tabpanel" aria-labelledby="tab2">
-                <div class="sorting-table sorting-table--docs" style="width:100%">
+                <div class="sorting-table anim sorting-table--docs" style="width:100%">
                     <table id="jav" class="display nowrap table-pager datatable table-pager--loc" style="width:100%">
                         <thead>
                             <tr>
@@ -357,7 +357,7 @@
             </div>
 
             <div class="tab-pane fade" id="tab3-list" role="tabpanel" aria-labelledby="tab3">
-                <div class="sorting-table sorting-table--docs" style="width:100%">
+                <div class="sorting-table anim sorting-table--docs" style="width:100%">
                     <table id="nab" class="display nowrap table-pager datatable table-pager--loc" style="width:100%">
                         <thead>
                             <tr>
@@ -486,7 +486,7 @@
             </div>
 
             <div class="tab-pane fade" id="tab4-list" role="tabpanel" aria-labelledby="tab4">
-                <div class="sorting-table sorting-table--docs" style="width:100%">
+                <div class="sorting-table anim sorting-table--docs" style="width:100%">
                     <table id="ostala" class="display nowrap table-pager datatable table-pager--loc" style="width:100%">
                         <thead>
                             <tr>
@@ -533,7 +533,7 @@
 
             <div class="izvestaj__tabele tab-pane fade" id="tab5-list" role="tabpanel"
                 aria-labelledby="tab5">
-                <div class="sorting-table sorting-table--docs" style="width:100%">
+                <div class="sorting-table anim sorting-table--docs" style="width:100%">
                     <table id="sluzL" class="display nowrap table-pager datatable table-pager--loc" style="width:100%">
                         <thead>
                             <tr>
@@ -609,7 +609,7 @@
 
             <div class="izvestaj__tabele tab-pane fade" id="tab6-list" role="tabpanel"
                 aria-labelledby="tab6">
-                <div class="sorting-table sorting-table--docs" style="width:100%">
+                <div class="sorting-table anim sorting-table--docs" style="width:100%">
                     <table id="sluzB" class="display nowrap table-pager datatable table-pager--loc" style="width:100%">
                         <thead>
                             <tr>
@@ -684,7 +684,7 @@
             </div>
 
             <div class="tab-pane fade" id="tab7-list" role="tabpanel" aria-labelledby="tab7">
-                <div class="sorting-table sorting-table--docs" style="width:100%">
+                <div class="sorting-table anim sorting-table--docs" style="width:100%">
                     <table id="pravila" class="display nowrap table-pager datatable table-pager--loc" style="width:100%">
                         <thead>
                             <tr>
