--- a/uplatna-mesta.html
+++ b/uplatna-mesta.html
@@ -235,7 +235,7 @@ Pronađi svoje srećno mesto!</p>
     <!-- MAP -->
 
 
-    <div class="container my-5 sorting-table">
+    <div class="container my-5 sorting-table anim">
 
         <table id="example" class="display nowrap table-pager table-pager--loc" style="width:100%">
             <thead>
