--- a/index.html
+++ b/index.html
@@ -1752,7 +1752,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script> <!--TODO-->
+    </script>
     <script src="js/main.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="https://kit.fontawesome.com/b071412929.js" crossorigin="anonymous"></script>
