--- a/loto.html
+++ b/loto.html
@@ -1244,9 +1244,33 @@
                          </span>
                     </form>
                 </div>
-                <div class="modal-footer justify-content-center">
+                <div class="modal-footer justify-content-between">
+                    <div>
+                        <button class="btn btn-dark ml-2 btn--padd-xs"><strong>QP</strong></button>
+
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 640 640"
+                            style="enable-background:new 0 0 640 640;" xml:space="preserve" class="ticket-heart">
+                            <defs>
+                                <path
+                                    d="M60.45 345.45L15 200.91 83.18 73.64l143.64-11.82 96.36 106.36L365 97.27l102.73-49.09 130.91 66.37 17.27 183.63L320 582.73 60.45 345.45z"
+                                    id="a"></path>
+                                <path
+                                    d="M470 37.3c-67.43 0-110.13 40.27-134.07 74.06-6.21 8.77-11.49 17.56-15.93 25.83-4.44-8.27-9.72-17.06-15.93-25.83C280.13 77.57 237.43 37.3 170 37.3c-47.95 0-91.74 19.72-123.31 55.54C16.58 127.01 0 172.77 0 221.69c0 53.25 20.79 102.78 65.43 155.87 39.9 47.45 97.29 96.36 163.76 153 24.76 21.11 50.38 42.93 77.64 66.79l.82.71c3.54 3.1 7.94 4.64 12.35 4.64 4.41 0 8.82-1.54 12.35-4.64l.82-.71c27.26-23.86 52.88-45.68 77.65-66.79 66.46-56.64 123.85-105.55 163.75-153C619.21 324.47 640 274.94 640 221.69c0-48.92-16.58-94.68-46.69-128.85C561.74 57.02 517.95 37.3 470 37.3zM320 559.08c-23.17-20.14-45.14-38.87-66.49-57.06C123.43 391.17 37.5 317.95 37.5 221.69c0-39.79 13.26-76.74 37.33-104.06C99.18 90.01 132.97 74.8 170 74.8c51.41 0 84.65 31.67 103.47 58.24 16.89 23.83 25.7 47.85 28.7 57.07A18.752 18.752 0 00320 203.05c8.12 0 15.31-5.22 17.83-12.94 3-9.22 11.81-33.24 28.7-57.07C385.36 106.47 418.59 74.8 470 74.8c37.03 0 70.82 15.21 95.17 42.83 24.07 27.32 37.33 64.27 37.33 104.06 0 96.26-85.93 169.48-216.01 280.33-21.35 18.19-43.32 36.91-66.49 57.06z"
+                                    id="b"></path>
+                            </defs>
+                            <use xlink:href="#a" fill="#fff" class="ticket-heart__bg"></use>
+                            <use xlink:href="#a" fill-opacity="0" stroke="#000" class="ticket-heart__stroke"></use>
+                            <g>
+                                <use xlink:href="#b" class="ticket-heart__stroke"></use>
+                                <use xlink:href="#b" fill-opacity="0" stroke="#000" stroke-opacity="0"
+                                    class="ticket-heart__stroke"></use>
+                            </g>
+                        </svg>
+                    </div>
+                    
                     <button type="button" class="btn btn-secondary"><strong>IGRAJ</strong></button>
-                    <p class="underline cancel mr-4"><strong>Poništi sve</strong></p>
+                    <p class="underline cancel cancel--rel mr-4"><strong>Poništi sve</strong></p>
                 </div>
             </div>
         </div>
