--- a/faq.html
+++ b/faq.html
@@ -39,25 +39,25 @@
                                 Igre
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Loto</a>
-                                <a class="dropdown-item" href="#">Bingo</a>
+                                <a class="dropdown-item" href="loto.html">Loto</a>
+                                <a class="dropdown-item" href="bingo.html">Bingo</a>
                                 <a class="dropdown-item" href="#">Greb greb</a>
                                 <a class="dropdown-item" href="#">e-Srećke</a>
                                 <a class="dropdown-item" href="#">Tombola</a>
-                                <a class="dropdown-item" href="#">Pravila igara</a>
+                                <a class="dropdown-item" href="">Pravila igara</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">Rezultati</a>
+                            <a class="nav-link px-3" href="rezultati.html">Rezultati</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">Uplatna mesta</a>
+                            <a class="nav-link px-3" href="uplatna-mesta.html">Uplatna mesta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-3" href="#">Vesti</a>
+                            <a class="nav-link px-3" href="srecne-vesti.html">Vesti</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="o-nama.html" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 O nama
                             </a>
@@ -85,8 +85,8 @@
 
                     <!-- Logged out -->
                     <div class="logged-out">
-                        <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">PRIJAVI SE</a>
-                        <a href="#" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ
+                        <a href="login.html" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">PRIJAVI SE</a>
+                        <a href="registracija.html" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ
                                 SE</strong></a>
                     </div>
                 </div>
