--- a/greb-greb.html
+++ b/greb-greb.html
@@ -44,8 +44,8 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="loto.html">Loto</a>
                                 <a class="dropdown-item" href="bingo.html">Bingo</a>
-                                <a class="dropdown-item" href="#">Greb greb</a>
-                                <a class="dropdown-item" href="#">e-Srećke</a>
+                                <a class="dropdown-item" href="greb-greb.html">Greb greb</a>
+                                <a class="dropdown-item" href="e-srecke.html">e-Srećke</a>
                                 <a class="dropdown-item" href="#">Tombola</a>
                                 <a class="dropdown-item" href="">Pravila igara</a>
                             </div>
